text alignment fix

--- a/styles/index.scss
+++ b/styles/index.scss
@@ -278,7 +278,7 @@ body {
     align-self: flex-end;
 
     transition: opacity 250ms;
-    text-align: right;
+    text-align: left;
 
     width: auto;
     max-width: 130px;
